--- a/projects/tribute/codepen.html
+++ b/projects/tribute/codepen.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>A Tribute to Tony</title>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <style>
     body {
         background-color: lightgrey;
@@ -144,7 +145,7 @@
             <h3>Background</h3>
             <div id="tribute-info-text">
                 <p>
-                    Born in downtown Los Angeles on Februaru 29, 1960, Tony Robbins comes from humble beginnings. His stepfather, a former minor league baseball player who was working as a salesman, struggled to get by, and the family often couldn't afford to celebrate Thanksgiving and Christmas.
+                    Born in downtown Los Angeles on Februaru 29, 1960, <a href="http://www.tonyrobbins.com" target="_blank">Tony Robbins</a> comes from humble beginnings. His stepfather, a former minor league baseball player who was working as a salesman, struggled to get by, and the family often couldn't afford to celebrate Thanksgiving and Christmas.
                 </p>
                 <p>
                     At a young age, Robbins decided that he wanted to be rich when he grew up, so that he could help people in need. He made his first million at age 24. Two years later, the huge success of his first book 'Unlimited Power' launched him into the mainstream.
