--- a/projects/landingpage/emuallim.html
+++ b/projects/landingpage/emuallim.html
@@ -7,8 +7,8 @@
     <!-- Fav Icon -->
     <link rel="icon" href="img/favicon.png">
     <!-- Import Section -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://github.com/Emuallim/emuallim.github.io/blob/master/projects/landingpage/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/emuallim.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <!--Import Script Section-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -21,15 +21,17 @@
 </head>
 
 <body id="home">
-<header>
+<header id="header">
     <nav id="nav-bar">
         <ul>
-            <li class="active"><a href="#home">Home</a></li>
-            <li><a href="#gallery">Gallery</a></li>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#download">Download</a></li>
+            <li ><a class="nav-link" href="#home">Home</a></li>
+            <li ><a class="nav-link" href="#gallery">Gallery</a></li>
+            <li><a class="nav-link" href="#features">Features</a></li>
+            <li><a class="nav-link" href="#video-container">Emuallim TV</a></li>
+            <li><a class="nav-link" href="#download">Download</a></li>
         </ul>
     </nav>
+  <img id="header-img" src="#" alt="">
 </header>
 
 <!-- Full Page Section -->
@@ -39,7 +41,7 @@
             <!--Left Section -->
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 wow slideInLeft">
                 <center>
-                    <img src="img/logo.png" alt="this is a logo" class="logo">
+                    <img src="https://raw.githubusercontent.com/Emuallim/emuallim.github.io/master/projects/landingpage/img/logo.png" alt="this is a logo" class="logo">
                 </center>
                 <center>
                     <h1>Emuallim</h1>
@@ -48,7 +50,7 @@
             </div>
             <!--Right Section-->
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 wow slideInRight">
-                <center><img src="img/iphonex.png" alt="iphonex image" class="imgright"></center>
+                <center><img src="https://raw.githubusercontent.com/Emuallim/emuallim.github.io/master/projects/landingpage/img/iphonex.png" alt="iphonex image" class="imgright"></center>
             </div>
         </div>
     </div>
@@ -74,16 +76,16 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/2.jpg" class="d-block" alt="First slide">
+                        <img src="https://raw.githubusercontent.com/Emuallim/emuallim.github.io/master/projects/landingpage/img/2.jpg" class="d-block" alt="First slide">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/5.jpg" class="d-block" alt="Second slide">
+                        <img src="https://raw.githubusercontent.com/Emuallim/emuallim.github.io/master/projects/landingpage/img/5.jpg" class="d-block" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/4.jpg" class="d-block" alt="Third slide">
+                        <img src="https://raw.githubusercontent.com/Emuallim/emuallim.github.io/master/projects/landingpage/img/4.jpg" class="d-block" alt="Third slide">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/3.jpg" class="d-block" alt="Fourth slide">
+                        <img src="https://raw.githubusercontent.com/Emuallim/emuallim.github.io/master/projects/landingpage/img/3.jpg" class="d-block" alt="Fourth slide">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -143,6 +145,17 @@
         </div>
     </div>
 </div>
+  
+  
+<!--video-->    
+        <div id="video-container">
+          <div class="  text-center">
+                <h3><b>Emuallim TV</b></h3>
+                <hr>
+            </div>
+          <iframe id="video" src="https://www.youtube.com/embed/XpHFNUoDrY8"               frameborder="0" allow="accelerometer; autoplay; encrypted-           media; gyroscope; picture-in-picture" allowfullscreen>             </iframe>
+        </div>
+ 
 <!--download-->
 <div id="download" class="col-md-12 col-xs-12 col-sm-12 col-lg-12 download text-center">
     <div class="container">
@@ -156,12 +169,13 @@
 
         <div class="row">
             <div class="col align-self-center mb-5 wow zoomInDown">
-                <a href="itunes.com" class="mr-5"><img src="img/apple.png" alt=""></a>
-                <a href="play.google.com"><img src="img/android.png" alt=""></a>
+                <a href="itunes.com" class="mr-5"><img src="https://raw.githubusercontent.com/Emuallim/emuallim.github.io/master/projects/landingpage/img/apple.png" alt=""></a>
+                <a href="play.google.com"><img src="https://raw.githubusercontent.com/Emuallim/emuallim.github.io/master/projects/landingpage/img/android.png" alt=""></a>
             </div>
         </div>
     </div>
 </div>
+  
 <!-- footer -->
 <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 footer text-center">
     <div class="container">
@@ -169,13 +183,16 @@
             <div class="col-md-4 col-sm-4 col-lg-4"></div>
             <div class="col-md-4 col-sm-4 col-lg-4">
                 <center>
-                    <h1><b>Need Help?</b></h1>
+                    <h1><b>Want a Gift?</b></h1>
                 </center>
                 <center>
                     <a href="">
-                        <button>
-                            <h4><b>Shoot us an email</b></h4>
-                        </button>
+                      <form id="form" action="submit">
+                     <!-- <input id="email" type="submit"> -->
+                        <input name="email" id="email" type="email" placeholder="Enter your email address" required/>
+                        <input id="submit" type="submit" />
+                            
+                      </form>
                     </a>
                 </center>
             </div>
@@ -190,15 +207,13 @@
             <div class="col-md-4 col-sm-4 col-lg-4"></div>
             <div class="col-md-4 col-sm-4 col-lg-4">
                 <center>
-                    <img src="img/logo-footer.png" alt="logo footer">
+                    <img src="https://raw.githubusercontent.com/Emuallim/emuallim.github.io/master/projects/landingpage/img/logo-footer.png" alt="logo footer">
                 </center>
             </div>
             <div class="col-md-4 col-sm-4 col-lg-4"></div>
         </div>
     </div>
 </div>
-
-
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
