--- a/projects/survey/index.html
+++ b/projects/survey/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>SeriousSurvey</title>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <style type="text/css">
     @import url(https://fonts.googleapis.com/css?family=Raleway:400,500);
 
