changed css url

--- a/projects/myblitz/index.html
+++ b/projects/myblitz/index.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Blitz Homepage</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-
-	<link rel="stylesheet" href="css/reset.css">
+	
 	<link href="https://fonts.googleapis.com/css?family=Economica:400,700|Pacifico&display=swap" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" href="css/font-awesome.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="homepage/css/reset.css">
+	<link rel="stylesheet" href="homepage/css/font-awesome.css">
+	<link rel="stylesheet" href="homepage/css/style.css">
 </head>
 
 <!-- Body -->
@@ -21,10 +21,10 @@
 			<nav>
 				<ul>
 					<li><a href="#">Homepage<em>Home</em></a></li>
-					<li><a href="../about/about.html">Who are we?<em>About</em></a></li>
+					<li><a href="about/about.html">Who are we?<em>About</em></a></li>
 					<li><a href="#">My portfolio<em>Projects</em></a></li>
 					<li><a href="#">Latest News<em>Blog</em></a></li>
-					<li><a href="../contact/contact.html" target="_blank">Get in touch<em>contact</em></a></li>
+					<li><a href="contact/contact.html" target="_blank">Get in touch<em>contact</em></a></li>
 				</ul>
 			</nav>
 			
