changed the width of staff section

--- a/projects/myblitz/about/about.html
+++ b/projects/myblitz/about/about.html
@@ -97,20 +97,19 @@
 
 <!-- PORTFOLIO -->
 
-		<section class="portfolio data-block">
-			<div class="title-wrapper">
-				<h2>my latest work</h2>
-			</div>
+		<section class="staff data-block">
 
 			<div class="clearfix">
 				<article class="work">
 					<figure>
 						<img src="http://lorempixel.com/220/120/people?t=1" alt="image"  class="fixed-width-again">
 					</figure>
-
-					<h3>Vallara brochure</h3>
+					<div>
+						<h3>Vallara brochure</h3>
+						<p>1.306.432.0065</p>
+					</div>
 					<p>
-						When you work simply for yourself or for your own personal gain your mind will seldom rise above the limitations of the undeveloped personal life
+						When you work simply for yourself or for your own personal gain your mind will seldom rise
 					</p>
 					<i class="fa fa-angle-double-right"></i>
 					<a href="#" class="title">view project</a>
@@ -139,21 +138,6 @@
 					</figure>
 
 					<h3>Business cards</h3>
-					<p>
-						When you work simply for yourself or for your own personal gain your mind will seldom rise above the limitations of the undeveloped personal life
-					</p>
-					<i class="fa fa-angle-double-right"></i>
-					<a href="#" class="title">view project</a>
-
-				</article>
-
-
-				<article class="work">
-					<figure>
-						<img src="http://lorempixel.com/220/120/technics?t=4" alt="image"  class="fixed-width-again">
-					</figure>
-
-					<h3>Website design</h3>
 					<p>
 						When you work simply for yourself or for your own personal gain your mind will seldom rise above the limitations of the undeveloped personal life
 					</p>
