changed font-style and size in staff section

--- a/projects/myblitz/about/about.html
+++ b/projects/myblitz/about/about.html
@@ -104,45 +104,53 @@
 					<figure>
 						<img src="http://lorempixel.com/220/120/people?t=1" alt="image"  class="fixed-width-again">
 					</figure>
-					<div>
-						<h3>Vallara brochure</h3>
-						<p>1.306.432.0065</p>
+					<div class="staff-info">
+						<div class="staff-number">
+							<p>1.306.432.0065</p>
+							<h3>jane doe</h3>
+						</div>
+						<h4 class="staff-job">ceo</h4>
+						<p>
+							When you work simply for yourself or for your own personal gain your mind will seldom rise above the limitations.
+						</p>
 					</div>
-					<p>
-						When you work simply for yourself or for your own personal gain your mind will seldom rise
-					</p>
-					<i class="fa fa-angle-double-right"></i>
-					<a href="#" class="title">view project</a>
+				</article>
+
+
+				<article class="work">
+					<figure>
+						<img src="http://lorempixel.com/220/120/people?t=2" alt="image"  class="fixed-width-again">
+					</figure>
+
+					<div class="staff-info">
+						<div class="staff-number">
+							<p>1.306.432.0065</p>
+							<h3>john doe</h3>
+						</div>
+						<h4 class="staff-job">executive administrator</h4>
+						<p>
+							When you work simply for yourself or for your own personal gain your mind will seldom rise above the limitations.
+						</p>
+					</div>
 
 				</article>
 
 
 				<article class="work">
 					<figure>
-						<img src="http://lorempixel.com/220/120/nature?t=2" alt="image"  class="fixed-width-again">
+						<img src="http://lorempixel.com/220/120/people?t=3" alt="image"  class="fixed-width-again">
 					</figure>
 
-					<h3>Photoshop tuts</h3>
-					<p>
-						When you work simply for yourself or for your own personal gain your mind will seldom rise above the limitations of the undeveloped personal life
-					</p>
-					<i class="fa fa-angle-double-right"></i>
-					<a href="#" class="title">view project</a>
-
-				</article>
-
-
-				<article class="work">
-					<figure>
-						<img src="http://lorempixel.com/220/120/business?t=3" alt="image"  class="fixed-width-again">
-					</figure>
-
-					<h3>Business cards</h3>
-					<p>
-						When you work simply for yourself or for your own personal gain your mind will seldom rise above the limitations of the undeveloped personal life
-					</p>
-					<i class="fa fa-angle-double-right"></i>
-					<a href="#" class="title">view project</a>
+					<div class="staff-info">
+						<div class="staff-number">
+							<p>1.306.432.0065</p>
+							<h3>jane doe</h3>
+						</div>
+						<h4 class="staff-job">realtor</h4>
+						<p>
+							When you work simply for yourself or for your own personal gain your mind will seldom rise above the limitations.
+						</p>
+					</div>
 
 				</article>
 			</div>
