created contact page

--- a/projects/myblitz/about/about.html
+++ b/projects/myblitz/about/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Blitz Homepage</title>
+	<title>Blitz About</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
 	<link rel="stylesheet" href="css/reset.css">
