--- a/projects/myblitz/contact/contact.html
+++ b/projects/myblitz/contact/contact.html
@@ -20,24 +20,60 @@
 			<h1>Blitz Homepage</h1>
 			<nav>
 				<ul>
-					<li><a href="#">Homepage<em>Home</em></a></li>
-					<li><a href="#">Who are we?<em>About</em></a></li>
+					<li><a href="../index.html">Homepage<em>Home</em></a></li>
+					<li><a href="../about/about.html">Who are we?<em>About</em></a></li>
 					<li><a href="#">My portfolio<em>Projects</em></a></li>
 					<li><a href="#">Latest News<em>Blog</em></a></li>
-					<li><a href="#">Get in touch<em>contact</em></a></li>
+					<li><a href="../contact/contact.html" target="_blank">Get in touch<em>contact</em></a></li>
 				</ul>
 			</nav>
 			
 		</div>
 	</header>
 
-<main class="fixed-width main-visual">
-	Main content
-</main>
 
+<!-- MAIN -->
 
+	<main class="fixed-width">
 
+	<!-- SIDEBAR -->
+		<aside class="aside-container">
+			<section>
+				<h3>about blitz</h3>
+				<p class="aside-paragraph">
+					When you work simply for yourself or for your own personal gain your mind will seldom rise
+				</p>
+			</section>
+		</aside>
 
+	<!-- CONTACT -->
+
+		<article class="contact-us-container">
+			<header class="contact-us">
+				<div class="clearfix">
+					<h1 class="about-us-header">contact us</h1>
+					<p class="silver silver-italic">
+						When you work simply for yourself or for your
+						own personal gain your mind will seldom rise above the limitations of the undeveloped personal life.
+					</p>
+				</div>
+			</header>
+
+	<!-- INTRO -->
+
+			<section class="intro clearfix data-block">
+					<p>
+						When you work simply for yourself or for your own personal gain your mind will seldom rise above the limitations of the undeveloped personal life; 
+					</p>
+					<p>
+						but when you are inspired by some great purpose, some extraordinary project, all your thoughts break bounds; your mind transcends limitations; your consciousness expands in every direction; and you find yourself in a new world, a great world, a wonderful world; dormant powers, faculties and talents become alive, and you discover yourself to be a larger man by far than you ever dreamed yourself to be.
+					</p>
+					<i class="fa fa-angle-double-right"></i>
+					<a href="#" class="title">find out more</a>
+			</section>
+		</article>
+	</main>
+	
 <!-- Footer -->
 	
 	<footer class="page-footer">
