Changed all the hidden h1s from homepage to about, contact, blog page

--- a/projects/myblitz/about/about.html
+++ b/projects/myblitz/about/about.html
@@ -17,7 +17,7 @@
 	<header class="page-header">
 		<div class="fixed-width clearfix">
 			<em class="identity">Blitz</em>
-			<h1>Blitz Homepage</h1>
+			<h1>Blitz About</h1>
 			<nav>
 				<ul>
 					<li><a href="../index.html">Homepage<em>Home</em></a></li>
