changed the nav links from # to their actual link

--- a/projects/myblitz/about/about.html
+++ b/projects/myblitz/about/about.html
@@ -22,8 +22,8 @@
 				<ul>
 					<li><a href="../index.html">Homepage<em>Home</em></a></li>
 					<li><a href="#">Who are we?<em>About</em></a></li>
-					<li><a href="#">My portfolio<em>Projects</em></a></li>
-					<li><a href="#">Latest News<em>Blog</em></a></li>
+					<li><a href="../projects/projects.html">My portfolio<em>Projects</em></a></li>
+					<li><a href="../blog/blog.html">Latest News<em>Blog</em></a></li>
 					<li><a href="../contact/contact.html" target="_blank">Get in touch<em>contact</em></a></li>
 				</ul>
 			</nav>
