--- a/projects/myblitz/projects/projects.html
+++ b/projects/myblitz/projects/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Blitz Blog</title>
+	<title>Blitz Projects</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
 	<link rel="stylesheet" href="css/reset.css">
@@ -17,13 +17,13 @@
 	<header class="page-header">
 		<div class="fixed-width clearfix">
 			<em class="identity">Blitz</em>
-			<h1>Blitz Blog</h1>
+			<h1>Blitz Projects</h1>
 			<nav>
 				<ul>
 					<li><a href="../index.html">Homepage<em>Home</em></a></li>
 					<li><a href="../about/about.html">Who are we?<em>About</em></a></li>
-					<li><a href="../projects/projects.html">My portfolio<em>Projects</em></a></li>
-					<li><a href="#">Latest News<em>Blog</em></a></li>
+					<li><a href="#">My portfolio<em>Projects</em></a></li>
+					<li><a href="../blog/blog.html">Latest News<em>Blog</em></a></li>
 					<li><a href="../contact/contact.html">Get in touch<em>contact</em></a></li>
 				</ul>
 			</nav>
@@ -81,7 +81,7 @@
 
 		<article class="contact-us-container">
 			<header class="contact-us">
-				<h1 class="about-us-header">Blog</h1>
+				<h1 class="about-us-header">projects</h1>
 				<p class="silver silver-italic">
 					When you work simply for yourself or for your
 					own personal gain your mind will seldom rise above the limitations of the undeveloped personal life.
