deleted the main section content in projects section

--- a/projects/myblitz/projects/projects.html
+++ b/projects/myblitz/projects/projects.html
@@ -91,35 +91,7 @@
 	<!-- INTRO -->
 
 			<section class="intro clearfix data-block">
-					<p>
-						When you work simply for yourself or for your own personal gain your mind will seldom rise above the limitations of the undeveloped personal life; 
-					</p>
-					<p>
-						but when you are inspired by some great purpose, some extraordinary project, all your thoughts break bounds; your mind transcends limitations; your consciousness expands in every direction; and you find yourself in a new world, a great world, a wonderful world; dormant powers, faculties and talents become alive, and you discover yourself to be a larger man by far than you ever dreamed yourself to be.
-					</p>
-
-					<div class="container">
-					  <form action="/action_page.php">
-					  	<div class="form-names">
-						    <label for="fname"></label>
-						    <input type="text" id="fname" name="firstname" placeholder="FIRST NAME">
-
-						    <label for="lname"></label>
-						    <input type="text" id="lname" name="lastname" placeholder="LAST NAME">
-
-						    <label for="country"></label>
-						    <input type="text" id="email" name="email" placeholder="EMAIL ADRESS">
-					    </div>
-
-					    <label for="subject"></label>
-					    <textarea id="subject" name="subject" placeholder="MESSAGE"></textarea>
-
-						<h4>
-					    	<i class="fa fa-angle-double-right"></i>
-							<a href="#" class="submit">submit</a>
-						</h4>
-					  </form>
-					</div>
+				<h2>THE PAGE IS UNDER CONSTRUCTION</h2>
 			</section>
 
 			
