just added a period at the end of a sentence

--- a/projects/myblitz/projects/projects.html
+++ b/projects/myblitz/projects/projects.html
@@ -84,7 +84,7 @@
 				<h1 class="about-us-header">projects</h1>
 				<p class="silver silver-italic">
 					When you work simply for yourself or for your
-					own personal gain your mind will seldom rise above the limitations of the undeveloped personal life.
+					own personal gain your mind will seldom rise above the limitations of the undeveloped personal life..
 				</p>
 			</header>
 
