landing page to 09.landingpage

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                   <i class="fas fa-times fa-fw"></i>
                   Close 
                 </button>
-                <a class="btn btn-primary" href="projects/landingpage/index.html" target="_blank">
+                <a class="btn btn-primary" href="projects/09.landingpage/index.html" target="_blank">
                   See Page
                 </a>
                 </button>
