renamed index.html files in projects

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                   <i class="fas fa-times fa-fw"></i>
                   Close 
                 </button>
-                <a class="btn btn-primary" href="projects/comingsoon/index.html" target="_blank">
+                <a class="btn btn-primary" href="projects/06.comingSoon/index.html" target="_blank">
                   See Page
                 </a>
               </div>
@@ -452,7 +452,7 @@
                   <i class="fas fa-times fa-fw"></i>
                   Close 
                 </button>
-                <a class="btn btn-primary" href="projects/tribute/index.html" target="_blank">
+                <a class="btn btn-primary" href="projects/07.tribute/index.html" target="_blank">
                   See Page
                 </a>
               </div>
@@ -494,7 +494,7 @@
                   <i class="fas fa-times fa-fw"></i>
                   Close 
                 </button>
-                <a class="btn btn-primary" href="projects/prodos/index.html" target="_blank">
+                <a class="btn btn-primary" href="projects/03.prodos/index.html" target="_blank">
                   See Page
                 </a>
               </div>
@@ -578,7 +578,7 @@
                   <i class="fas fa-times fa-fw"></i>
                   Close
                 </button>
-                <a class="btn btn-primary" href="projects/survey/index.html" target="_blank">
+                <a class="btn btn-primary" href="projects/08.survey/index.html" target="_blank">
                   See Page
                 </a>
               </div>
