Project Blitz DONE

--- a/projects/011.myblitz/index.html
+++ b/projects/011.myblitz/index.html
@@ -41,7 +41,7 @@
 			<figcaption class="clearfix">
 				<strong class="title">image caption title</strong>
 				<p>
-					When you work simply for yourself or for your
+					PROJECT DONE 8:00PM,Oct20,2019 -- When you work simply for yourself or for your
 					own personal gain
 					your mind will seldom rise above the limitations
 					of the undeveloped personal life;
