working on grid

--- a/projects/012.gridbiz/index.html
+++ b/projects/012.gridbiz/index.html
@@ -66,9 +66,14 @@
         <!-- Info Section -->
         <section class="info">
             <img src="img/pic1.jpg" alt="">
-            <h2>Your Business On The Web</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio vero placeat assumenda natus fuga explicabo qui ipsa incidunt facere omnis.</p>
-            <a href="#" class="btn">Learn More</a>
+            <div>
+                <h2>Your Business On The Web</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur 
+                 adipisicing elit. Distinctio vero placeat 
+                 assumenda natus fuga explicabo qui ipsa 
+                 incidunt facere omnis.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
         </section>
 
         <!-- Portfolio Section -->
