--- a/projects/013.cssgridtheme/gridsite.html
+++ b/projects/013.cssgridtheme/gridsite.html
@@ -13,7 +13,7 @@
         }
 
         .site {
-            max-width: 800px;
+            /* max-width: 800px; */
             margin: 0 auto;
             display: grid;
             grid-template-columns: 2fr 1fr 1fr;
