--- a/projects/018.TacoJoint/index.html
+++ b/projects/018.TacoJoint/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="TacoJoint.css">
-    <title>Responsive Website!</title>
+    <title>Taco Joint</title>
 </head>
 
 <body>
@@ -84,7 +84,6 @@
                 <button>Learn More →</button>
             </div>
         </section>
-
 
         <section class="gallery">
             <h2>Instant Grams</h2>
