--- a/projects/014.gridbiz/index.html
+++ b/projects/014.gridbiz/index.html
@@ -31,7 +31,7 @@
             <header class="showcase">
                 <h1>Your Web Presence</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod ratione error asperiores explicabo excepturi assumenda!</p>
-                <a href="#" class="btn">Read More</a>
+                <a href="#" class="btn dark">Read More</a>
             </header>
             <div class="top-box top-box-a">
                 <h4>Membership</h4>
