--- a/projects/020.Nexter/index.html
+++ b/projects/020.Nexter/index.html
@@ -15,15 +15,44 @@
 
 <body class="container">
     <div class="sidebar">
-        sidebar
+        <button class="nav-btn"></button>
     </div>
 
     <header class="header">
-        header
+        <img src="img/logo.png" alt="Nexter logo" class="header__logo">
+        <h3 class="heading-3">Your own home:</h3>
+        <h1 class="heading-1">The ultimate personal freedom</h1>
+        <button class="btn header__btn">View more properties</button>
+        <div class="header__seenon-text">Seen on</div>
+        <div class="header__seenon-logos">
+            <img src="img/logo-bbc.png" alt="seen on logo 1">
+            <img src="img/logo-forbes.png" alt="seen on logo 2">
+            <img src="img/logo-techcrunch.png" alt="seen on logo 3">
+            <img src="img/logo-bi.png" alt="seen on logo 4">
+        </div>
     </header>
 
     <div class="realtors">
-        Top 3 realtors
+        <h3 class="heading-3">Top 3 Realtors</h3>
+        <div class="realtors__list">
+            <img src="img/realtor-1.jpeg" alt="Realtor 1" class="realtors__img">
+            <div class="realtors__details">
+                <h4 class="heading-4 heading-4--light">Erik Freeman</h4>
+                <p class="realtors__sold">245 houses sold</p>
+            </div>
+
+            <img src="img/realtor-2.jpeg" alt="Realtor 2" class="realtors__img">
+            <div class="realtors__details">
+                <h4 class="heading-4 heading-4--light">Kim Brow</h4>
+                <p class="realtors__sold">212 houses sold</p>
+            </div>
+
+            <img src="img/realtor-3.jpeg" alt="Realtor 3" class="realtors__img">
+            <div class="realtors__details">
+                <h4 class="heading-4 heading-4--light">Toby ramsey</h4>
+                <p class="realtors__sold">298 houses sold</p>
+            </div>
+        </div>
     </div>
 
     <section class="features">
@@ -332,7 +361,7 @@
 
         <!--
             THE SUPER POWER OF EMMET IS SHOWN HERE! I copy/pasted the whole thing 1 by 1 b/c it didn't hit me that
-            I could use emmet and save at least 20 minutes of my precious time spent on copy/pasting...
+            I could use the following code and save at least 20 minutes of my precious time spent on copy/pasting...
             (figure.gallery__item.gallery__item--$>img.gallery__img[src="img/gal-$.jpeg"][alt="Gallery image $"])*14 
         -->
 
@@ -340,7 +369,17 @@
     </section>
 
     <footer class="footer">
-        footer
+        <ul class="nav">
+            <li><a href="#" class="nav__link">Find your dream home</a></li>
+            <li><a href="#" class="nav__link">Request proposal</a></li>
+            <li><a href="#" class="nav__link">Download home planner</a></li>
+            <li><a href="#" class="nav__link">Contact us</a></li>
+            <li><a href="#" class="nav__link">Submit your property</a></li>
+            <li><a href="#" class="nav__link">Come work with us!</a></li>
+        </ul>
+        <p class="copyright">
+            &copy; Copyright 2020 by Emuallim. Feel free to use this project for your own purposes. This does NOT apply if you plan to produce your own course or tutorials based on this project.
+        </p>
     </footer>
 </body>
 
