gridbiz to nexter

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                   <i class="fas fa-times fa-fw"></i>
                   Close 
                 </button>
-                                <a class="btn btn-primary" href="projects/014.gridbiz/index.html" target="_blank">
+                                <a class="btn btn-primary" href="projects/020.Nexter/index.html" target="_blank">
                   See Page
                 </a>
                             </div>
