--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 <i class="fas fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="img/portfolio/home.jpg" alt="">
+                        <img class="img-fluid" src="img/portfolio/home2.jpg" alt="">
                     </div>
                 </div>
 
@@ -503,7 +503,7 @@
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <!-- Portfolio Modal - Image -->
-                                <img class="img-fluid rounded mb-5" src="img/portfolio/home.jpg" alt="">
+                                <img class="img-fluid rounded mb-5" src="img/portfolio/home2.jpg" alt="">
                                 <!-- Portfolio Modal - Text -->
                                 <p class="mb-5">Prodos is the very first website I built as the final project of "Thirty Days to Learn HTML and CSS". It might be ideal for small business owners or solo-entrepreneurs. No javascript was used to make this site. I used only
                                     HTML, CSS and a little bit of bootstrap.</p>
