--- a/projects/jQuery/ajax/index.html
+++ b/projects/jQuery/ajax/index.html
@@ -110,7 +110,7 @@
 
     <br><br>
     <h1>Lesson 96 - Same Origin Policy</h1>
-    <img src="96.SameOriginPolicy.jpg" alt="">>
+    <img src="96.SameOriginPolicy.jpg" alt="">
     <!-- <script src="jQuery.js"></script> -->
     <script src="script.js"></script>
 </body>
