jQuery-project-done
completed the project but couldn't learn very much b/c there was way too much to remember at first exposure

--- a/projects/miscalleneous/learningJS/w3school/jQuery.html
+++ b/projects/miscalleneous/learningJS/w3school/jQuery.html
@@ -345,6 +345,8 @@
             <button id="noConBtn">Test jQuery</button>
         </div>
     </div>
+    <h4>Finished: 11:30am 4/4/2020</h4>
+
 </body>
 
 </html>
