--- a/projects/023.quizApps/quiz-level-1/index.html
+++ b/projects/023.quizApps/quiz-level-1/index.html
@@ -12,23 +12,23 @@
 <body>
     <div class="quiz-container">
         <div class="question-number">
-            <h3>Question <span class="question-num-value">1</span> of 3</h3>
+            <h3>Question <span class="question-num-value"></span> of <span class="total-question"></span></h3>
         </div>
         <div class="question">
-            How do you declare a JavaScript variable
+
         </div>
         <div class="options">
-            <div id="1" class="option1">variable carName;</div>
-            <div id="2" class="option2">var carName;</div>
-            <div id="3" class="option3">v carName;</div>
-            <div id="4" class="option4">none of these</div>
+            <div id="1" class="option1"></div>
+            <div id="2" class="option2"></div>
+            <div id="3" class="option3"></div>
+            <div id="4" class="option4"></div>
         </div>
         <div class="button">
             <button type="button" class="btn">Next</button>
         </div>
-        <div class="answer-tracker">
-            <div></div>
-            <div></div>
+        <div class="answers-tracker">
+            <div class=""></div>
+            <div class=""></div>
             <div></div>
         </div>
     </div>
