--- a/projects/023.quizApps/quiz-level-1/index.html
+++ b/projects/023.quizApps/quiz-level-1/index.html
@@ -18,10 +18,10 @@
 
         </div>
         <div class="options">
-            <div id="1" class="option1"></div>
-            <div id="2" class="option2"></div>
-            <div id="3" class="option3"></div>
-            <div id="4" class="option4"></div>
+            <div id="1" class="option1" onclick="check(this)"></div>
+            <div id="2" class="option2" onclick="check(this)"></div>
+            <div id="3" class="option3" onclick="check(this)"></div>
+            <div id="4" class="option4" onclick="check(this)"></div>
         </div>
         <div class="button">
             <button type="button" class="btn">Next</button>
