--- a/projects/023.quizApps/quiz-level-1/index.html
+++ b/projects/023.quizApps/quiz-level-1/index.html
@@ -24,7 +24,7 @@
             <div id="3" class="option4" onclick="check(this)"></div>
         </div>
         <div class="button">
-            <button type="button" class="btn">Next</button>
+            <button type="button" class="btn" onclick="next()">Next</button>
         </div>
         <div class="answers-tracker">
 
