--- a/projects/023.quizApps/quiz-level-1/index.html
+++ b/projects/023.quizApps/quiz-level-1/index.html
@@ -31,8 +31,10 @@
         </div>
     </div>
     <div class="quiz-over">
-        <h1>Good try! <br> You got <span class="correct-answers">3</span> out of <span class="total-question2">10</span> answers correct! <br> That's <span class="percentage">30%</span> try again</h1>
-        <button type="button" onclick="tryAgain()">TryAgain</button>
+        <div class="box">
+            <h1>Good try! <br> You got <span class="correct-answers"></span> out of <span class="total-question2"></span> answers correct! <br> That's <span class="percentage"></span> try again</h1>
+            <button type="button" onclick="tryAgain()">TryAgain</button>
+        </div>
     </div>
 </body>
 
