--- a/projects/023.quizApps/quiz-level-1/index.html
+++ b/projects/023.quizApps/quiz-level-1/index.html
@@ -26,7 +26,7 @@
         <div class="button">
             <button type="button" class="btn" onclick="next()">Next</button>
         </div>
-        <div class="answers-tracker">
+        <div class="answer-tracker">
 
         </div>
     </div>
