--- a/projects/miscalleneous/100-JS-Projects/02.HexBgColor/index.html
+++ b/projects/miscalleneous/100-JS-Projects/02.HexBgColor/index.html
@@ -45,27 +45,33 @@
 </head>
 
 <body>
-    <p class="hex">Hex Color: <span id="value"></span></p>
+    <p class="hex">Hex Color: <span id="qiymat"></span></p>
     <button id="btn">Click Me!</button>
     <script>
         (function() {
             const tana = document.querySelector('body')
             const tugma = document.querySelector('#btn')
-            const qiymat = document.querySelector('#value')
-            const hexQiymat = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 'A', 'B', 'C', 'D', 'E', 'F']
+            const qiymat = document.querySelector('#qiymat')
+            const boqQiymat = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 'A', 'B', 'C', 'D', 'E', 'F']
+            tugma.addEventListener('click', uzgartirBoq)
 
-            tugma.addEventListener('click', uzgartirHex)
-
-            function uzgartirHex() {
-                let hex = '#'
-
+            function uzgartirBoq() {
+                let boq = "#"
                 for (let i = 0; i < 6; i++) {
-                    const index = Math.floor(Math.random() * hexQiymat.length)
-                    hex += hexQiymat[index]
+                    const index = Math.floor(Math.random() * boqQiymat.length)
+                    bog += boqQiymat[index]
                 }
-                qiymat.textContent = hex
-                tana.style.backgroundColor = hex
             }
+
+            // function uzgartirBoq() {
+            //     let boq = '#'
+            //     for (let i = 0; i < 6; i++) {
+            //         const index = Math.floor(Math.random() * boqQiymat.length)
+            //         boq += boqQiymat[index]
+            //     }
+            //     qiymat.textContent = boq
+            //     tana.style.backgroundColor = boq
+            // }
         })()
         // [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 'A', 'B', 'C', 'D', 'E', 'F']
     </script>
